# pyperliquidity

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: hip2-reverse-engineering.md  hyperliquid-mm-guide.md
openspec/: config.yaml
openspec/changes/archive/2026-02-28-implement-batch-emitter/: design.md  tasks.md
openspec/changes/implement-batch-emitter/: proposal.md
openspec/changes/implement-order-state/: tasks.md
openspec/changes/implement-pricing-grid/: design.md  tasks.md
openspec/changes/implement-quoting-engine/: proposal.md  tasks.md
openspec/changes/implement-ws-state/: design.md
openspec/changes/order-differ/: design.md  proposal.md  tasks.md
openspec/specs/batch_emitter/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/inventory/: spec.md
openspec/specs/order_differ/: spec.md
openspec/specs/order_state/: spec.md
openspec/specs/pricing_grid/: spec.md
openspec/specs/quoting_engine/: spec.md
openspec/specs/rate_limit/: spec.md
openspec/specs/ws_state/: spec.md
src/pyperliquidity/: __init__.py  batch_emitter.py  cli.py  grid_generator.py  inventory.py  order_differ.py  order_state.py  pricing_grid.py  quoting_engine.py  rate_limit.py  spot_meta_fix.py  ws_state.py
tests/: mock_exchange.py  test_batch_emitter.py  test_cli.py  test_fill_coverage.py  test_grid_generator.py  test_inventory.py  test_order_differ.py  test_order_state.py  test_pricing_grid.py  test_quoting_engine.py  test_rate_limit.py  test_spot_meta_fix.py  test_ws_state.py
(+32 files in other folders)
